--- a/_config.yml
+++ b/_config.yml
@@ -9,23 +9,23 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Your Name / Site Title"
+title                    : "Gaofeng Wu / Personal Homepage"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+name                     : &name "Gaofeng Wu"
+description              : &description "A second-year master's student from ShanghaiTech University."
+url                      : https://gaofengwu1912.github.io/cv/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "gaofengwu1912/gaofengwu1912.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "./images/Woo.jpg"
+  avatar           : "./images/Woo.png"
   name             : "Gaofeng Wu"
   pronouns         : "Master"# example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "A second-year master's student from ShanghaiTech University."
   location         : "Shanghai, China"
   employer         : "ShanghaiTech University"
   uri              : # URL
@@ -50,7 +50,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  # bluesky          : "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
