--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "gaofengwu1912/gaofengwu1912.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "./images/Woo.png"
+  avatar           : "Woo.png"
   name             : "Gaofeng Wu"
   pronouns         : "Master"# example: "she/her"  
   bio              : "A second-year master's student from ShanghaiTech University."
