--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title_separator          : "-"
 name                     : &name "Gaofeng Wu"
 description              : &description "A second-year master's student from ShanghaiTech University."
 url                      : https://gaofengwu1912.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
+baseurl                  : "https://github.com/GaofengWu1912/cv/blob/master" # the subpath of your site, e.g. "/blog"
 repository               : "gaofengwu1912/gaofengwu1912.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
@@ -22,7 +22,7 @@ repository               : "gaofengwu1912/gaofengwu1912.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "https://github.com/GaofengWu1912/cv/blob/master/images/Woo.png"
+  avatar           : "./images/Woo.png"
   name             : "Gaofeng Wu"
   pronouns         : "Master"# example: "she/her"  
   bio              : "A second-year master's student from ShanghaiTech University."
