--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ title                    : "Gaofeng Wu / Personal Homepage"
 title_separator          : "-"
 name                     : &name "Gaofeng Wu"
 description              : &description "A second-year master's student from ShanghaiTech University."
-url                      : https://gaofengwu1912.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
-baseurl                  : "/cv/blob/master" # the subpath of your site, e.g. "/blog"
+url                      : "https://gaofengwu1912.github.io" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "gaofengwu1912/gaofengwu1912.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
