--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default"
 title                    : "Gaofeng Wu' Homepage"
 title_separator          : "-"
 name                     : &name "Gaofeng Wu"
-description              : &description # "A second-year master's student from ShanghaiTech University."
+description              : &description "A second-year master's student from ShanghaiTech University."
 url                      : https://gaofengwu1912.github.io/cv # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "gaofengwu1912/gaofengwu1912.github.io"
@@ -25,7 +25,7 @@ author:
   avatar           : "Woo.png"
   name             : "Gaofeng Wu"
   pronouns         : "Master"# example: "she/her"  
-  bio              : "A second-year master's student from ShanghaiTech University."
+  bio              : # "A second-year master's student from ShanghaiTech University."
   location         : "Shanghai, China"
   employer         : "ShanghaiTech University"
   uri              : # URL
