--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   pronouns         : "Master"# example: "she/her"  
   bio              : # "A second-year master's student from ShanghaiTech University."
   location         : "Shanghai, China"
-  employer         : "ShanghaiTech University"
+  employer         : ""
   uri              : # URL
   email            : "wugf2023@shanghaitech.edu.cn" 
 
