--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,13 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-site_theme               : "default"
 title                    : "Gaofeng Wu' Homepage"
 title_separator          : "-"
 name                     : &name "Gaofeng Wu"
-description              : &description "Gaofeng Wu's Personal Homepage."
-url                      : https://gaofengwu1912.github.io/cv # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+description              : &description "A second-year master's student in ShanghaiTech University"
+url                      : https://gaofengwu1912.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "gaofengwu1912/gaofengwu1912.github.io"
+repository               : "gaofengwu1912.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
